three section added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,70 @@
 </head>
 
 <body>
+    <section class="flexible-container">
+        <div class="half-width">
+            <h1><span class="color-orange">Skip</span> The Diet,</h1>
+            <h1>Just Eat Healty</h1>
+            <h1>With Kotchandpur Food Network</h1>
+
+            <p>Imagine you dont't need a diet beacuse we provide Healty and delicious food for you.</p>
+
+            <a class="button-shape" target="_blank"
+                href="https://web.facebook.com/Milir-Rannaghor-143155676486654">Order Food</a>
+        </div>
+
+        <div class="half-width">
+            <img class="side-img" src="images/ariana-top.png" alt="ariana">
+        </div>
+    </section>
+
+    <section class="flexible-container about-me">
+        <div class="half-width">
+            <img id="person-img" src="images/person.png" alt="">
+        </div>
+
+        <div class="half-width">
+            <h2>About Me</h2>
+            <p>It's Mili the owner of Kotchandpur Food Network who loves to
+                cook delicious foods. I take order for any kinds of programs. I've started cooking with my mom when I
+                was about 6 years old. Now I own a food shop.
+            </p>
+            <a class="button-shape" target="_blank"
+                href="https://web.facebook.com/Milir-Rannaghor-143155676486654">Contact Me</a>
+        </div>
+    </section>
+
+    <section id="my-recipies">
+        <div id="recipies">
+            <h2>My Recipies</h2>
+            <p>All of these recipies are from my mother.
+                All the ingredients are natural.<br>
+                Most of the foods are make from natural sources. <br>
+                Recipies are from 19th century.
+            </p>
+        </div>
+
+        <div class="flexible-container">
+            <div class="food-item">
+                <img src="images/food1.jpg" alt="food1">
+                <h3>Vagitable Cacke</h3>
+                <p>This cake is make by special Vagitable. And i's fried by Vagitable oil that will make</p>
+            </div>
+            <div class="food-item">
+                <img src="images/food2.png" alt="food3">
+                <h3>Natural Soup</h3>
+                <p>It's made of natural ingredients. It's very tasty and helthy as well. And specially it's oil free.
+                </p>
+            </div>
+            <div class="food-item">
+                <img src="images/food3.jpg" alt="food3">
+                <h3>special Mutton</h3>
+                <p>It's a special kind of Mutton curry. It's very delicious. It's mixed with special kind of indian
+                    masala.
+                </p>
+            </div>
+        </div>
+    </section>
 
 </body>
 
