Ask Abything section added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="half-width">
             <h1><span class="color-orange">Skip</span> The Diet,</h1>
             <h1>Just Eat Healty</h1>
-            <h1>With Kotchandpur Food Network</h1>
+            <h1>With KCP Food Network</h1>
 
             <p>Imagine you dont't need a diet beacuse we provide Healty and delicious food for you.</p>
 
@@ -76,6 +76,26 @@
                 </p>
             </div>
         </div>
+    </section>
+
+    <section class="ask-any">
+        <h2>Ask Anything</h2>
+        <p>Any thing in mind? Feel in the form to Ask Questions</p>
+        <form>
+            <label for="fname">First name:</label>
+            <input type="text" id="fname" name="fname"><br>
+            <label for="lname">Last name:</label>
+            <input type="text" id="lname" name="lname"><br>
+            <label for="email">Email Address:</label>
+            <input type="email" id="email" name="email"><br>
+            <label for="message">Your Questions</label>
+            <textarea name="meassage" id="meassage" cols="30" rows="10"></textarea><br>
+            <button class="button-shape">Submit</button>
+        </form>
+    </section>
+
+    <section>
+        <h2></h2>
     </section>
 
 </body>
