reservation section added and Contact us updated

--- a/index.html
+++ b/index.html
@@ -78,25 +78,74 @@
         </div>
     </section>
 
-    <section class="ask-any">
-        <h2>Ask Anything</h2>
-        <p>Any thing in mind? Feel in the form to Ask Questions</p>
-        <form>
-            <label for="fname">First name:</label>
-            <input type="text" id="fname" name="fname"><br>
-            <label for="lname">Last name:</label>
-            <input type="text" id="lname" name="lname"><br>
-            <label for="email">Email Address:</label>
-            <input type="email" id="email" name="email"><br>
-            <label for="message">Your Questions</label>
-            <textarea name="meassage" id="meassage" cols="30" rows="10"></textarea><br>
-            <button class="button-shape">Submit</button>
-        </form>
+    <section id="reservation">
+        <div id="reservasion-dec">
+            <h2>Reservasion</h2>
+            <p>Do you need Reservasion?</p>
+        </div>
+
+        <div class="flexible-container">
+            <div class="half-width">
+                <form>
+                    <label>Name:</label>
+                    <input type="text"><br>
+                    <label>Mobile:</label>
+                    <input type="tel"><br>
+                    <label>Email:</label>
+                    <input type="email"><br>
+                    <label>Date:</label>
+                    <input type="date"><br>
+                    <label>Time:</label>
+                    <input type="time"><br><br>
+                    <button class="button-shape">Make Reservasion</button>
+                </form>
+            </div>
+
+            <div class="half-width">
+                <h3>Reservasion Rules</h3>
+                <li>You need to reserve before 24 hours.</li>
+                <li>You need to pay 50% in advance.</li>
+                <li>Free Parking.</li>
+            </div>
+        </div>
     </section>
 
-    <section>
-        <h2></h2>
+    <section id="contact-us">
+        <div>
+            <h2>Contact Us</h2>
+        </div>
+        <div class="flexible-container">
+            <div class="half-width">
+                <p>Contact Details:</p>
+                <li>Mobile: +8801XXXXXXX</li>
+                <li>Email: info@kcpfoodnet.com</li>
+                <li><a href="https://web.facebook.com/Milir-Rannaghor-143155676486654">facebook</a></li>
+                <li><a href="https://web.instagram.com/Milir-Rannaghor-143155676486654">Instagram</a></li>
+                <li><a href="https://web.printarest.com/Milir-Rannaghor">printarest</a></li>
+            </div>
+            <div class="half-width">
+                <p>Any thing in mind? Feel in the form to Ask Questions</p>
+                <form>
+                    <label>First name:</label>
+                    <input type="text"><br>
+                    <label>Last name:</label>
+                    <input type="text"><br>
+                    <label>Email Address:</label>
+                    <input type="email"><br>
+                    <label for="message">Your Questions</label>
+                    <textarea cols="30" rows="10"></textarea><br><br>
+                    <button class="button-shape">Submit</button>
+                </form>
+            </div>
+        </div>
     </section>
+
+
+
+    <footer>
+        <h3><span class="color-orange">FOOD</span> NETWORK</h3>
+        <p>Eat healthy to live healthy. Live healthy to live happy.</p>
+    </footer>
 
 </body>
 
