button change in contact us section

--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
                     <input type="text"><br>
                     <label>Email Address:</label>
                     <input type="email"><br>
-                    <label for="message">Your Questions</label>
+                    <label>Your Questions</label>
                     <textarea cols="30" rows="10"></textarea><br><br>
-                    <button class="button-shape">Submit</button>
+                    <button class="button-shape">Send</button>
                 </form>
             </div>
         </div>
